--- a/nanograd/models/vision_transformer/token.ipynb
+++ b/nanograd/models/vision_transformer/token.ipynb
@@ -143,13 +143,13 @@
     "\n",
     "    kv_cache = KVCache()\n",
     "\n",
-    "    # Generate tokens until you see the stop token\n",
+    "    \n",
     "    stop_token = processor.tokenizer.eos_token_id\n",
     "    generated_tokens = []\n",
     "\n",
     "    for _ in range(max_tokens_to_generate):\n",
-    "        # Get the model outputs\n",
-    "        # TODO: remove the labels\n",
+    "        \n",
+    "        \n",
     "        outputs = model(\n",
     "            input_ids=input_ids,\n",
     "            pixel_values=pixel_values,\n",
@@ -158,47 +158,47 @@
     "        )\n",
     "        kv_cache = outputs[\"kv_cache\"]\n",
     "        next_token_logits = outputs[\"logits\"][:, -1, :]\n",
-    "        # Sample the next token\n",
+    "        \n",
     "        if do_sample:\n",
-    "            # Apply temperature\n",
+    "            \n",
     "            next_token_logits = torch.softmax(next_token_logits / temperature, dim=-1)\n",
     "            next_token = _sample_top_p(next_token_logits, top_p)\n",
     "        else:\n",
     "            next_token = torch.argmax(next_token_logits, dim=-1, keepdim=True)\n",
     "        assert next_token.size() == (1, 1)\n",
-    "        next_token = next_token.squeeze(0)  # Remove batch dimension\n",
+    "        next_token = next_token.squeeze(0)  \n",
     "        generated_tokens.append(next_token)\n",
-    "        # Stop if the stop token has been generated\n",
+    "        \n",
     "        if next_token.item() == stop_token:\n",
     "            break\n",
-    "        # Append the next token to the input\n",
+    "        \n",
     "        input_ids = next_token.unsqueeze(-1)\n",
     "        attention_mask = torch.cat(\n",
     "            [attention_mask, torch.ones((1, 1), device=input_ids.device)], dim=-1\n",
     "        )\n",
     "\n",
     "    generated_tokens = torch.cat(generated_tokens, dim=-1)\n",
-    "    # Decode the generated tokens\n",
+    "    \n",
     "    decoded = processor.tokenizer.decode(generated_tokens, skip_special_tokens=True)\n",
     "\n",
     "    print(prompt + decoded)\n",
     "\n",
     "\n",
     "def _sample_top_p(probs: torch.Tensor, p: float):\n",
-    "    # (B, vocab_size)\n",
+    "    \n",
     "    probs_sort, probs_idx = torch.sort(probs, dim=-1, descending=True)\n",
-    "    # (B, vocab_size)\n",
+    "    \n",
     "    probs_sum = torch.cumsum(probs_sort, dim=-1)\n",
-    "    # (B, vocab_size)\n",
-    "    # (Substracting \"probs_sort\" shifts the cumulative sum by 1 position to the right before masking)\n",
+    "    \n",
+    "    \n",
     "    mask = probs_sum - probs_sort > p\n",
-    "    # Zero out all the probabilities of tokens that are not selected by the Top P\n",
+    "    \n",
     "    probs_sort[mask] = 0.0\n",
-    "    # Redistribute the probabilities so that they sum up to 1.\n",
+    "    \n",
     "    probs_sort.div_(probs_sort.sum(dim=-1, keepdim=True))\n",
-    "    # Sample a token (its index) from the top p distribution\n",
+    "    \n",
     "    next_token = torch.multinomial(probs_sort, num_samples=1)\n",
-    "    # Get the token position in the vocabulary corresponding to the sampled index\n",
+    "    \n",
     "    next_token = torch.gather(probs_idx, -1, next_token)\n",
     "    return next_token\n",
     "\n",
